--- a/package.json
+++ b/package.json
@@ -1,18 +1,30 @@
 {
-  "name": "ylenia",
-  "version": "0.0.1",
-  "description": "HTML-Parser",
-  "main": "index.js",
-  "scripts": {},
-  "keywords": [
-    "html",
-    "parser",
-    "typescript"
-  ],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@types/node": "^14.14.7",
-    "typescript": "^4.0.5"
-  }
+    "name": "ylenia",
+    "version": "0.0.2",
+    "description": "TypeScript-DataSources for JSON. Generates dynamic TS-Files.",
+    "main": "index.js",
+    "scripts": {},
+    "keywords": [
+        "DataSource",
+        "Source",
+        "Data",
+        "CodeGenerator",
+        "Code",
+        "Generator",
+        "TypeScript",
+        "JSON"
+    ],
+    "author": "Leo Battaglia",
+    "license": "ISC",
+    "devDependencies": {
+        "typescript": "^4.0.5"
+    },
+    "dependencies": {
+        "@types/node": "^14.14.9",
+        "samara": "^0.1.31"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/LeoBattaglia/ylenia.git"
+    }
 }
